* Added filter hooks to modify the markup before and after the widget text * Fixed z-index issue in fullscreen mode * Added widget icon for theme customizer * Updated danish translation * Updated FAQ and readme.txt
git-svn-id: http://plugins.svn.wordpress.org/black-studio-tinymce-widget/trunk@947787 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/black-studio-tinymce-widget.css
+++ b/black-studio-tinymce-widget.css
@@ -2,3 +2,6 @@
 #wp-black-studio-tinymce-widget-wrap {
 	display: none;
 }
+#available-widgets [class*="black-studio-tinymce"] .widget-title:before {
+	content: "\f116"; 
+}
